tests/warn/union-type.jo
data Option = None | Some(value: Int)
data Sum = Left(value: Int) | Right(value: Int)

def test =
  val a: Sum = Left(true)     // error
  val c: Option = Some(5)

  match c                             // error
    case None => println 0

  match c
    case _     => println 1
    case None => println 0           // error

  match c                             // error
    case Some(n) => println n
    case Some(n) => println n        // error

  println 10
